2006-08-11  Mikulas Patocka  <mikulas@artax.karlin.mff.cuni.cz>

	* key.c (check_selects): Fix possible crash on reference to select list
	element removed in callback.

2006-08-09  Denis Vlasenko  <vda.linux@googlemail.com>

	* key.c: Make escape key timeout user configurable via the
	environment variable KEYBOARD_KEY_TIMEOUT_US (in microseconds).

2006-08-08  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* hotlist.c (update_path_name): Fix gcc4 warning.

2006-06-26  Oswald Buddenhagen  <ossi@kde.org>

	* hotlist.c (remove_from_hotlist): Fix erronous check of the return
	value of query_dialog().

2006-08-03  Roland Illig  <roland.illig@gmx.de>

	* view.c: Added correct handling of Mac line endings.

2006-06-26  Pavel Tsekov  <ptsekov@gmx.net>

	* vfsdummy.h [!USE_VFS] (mc_getlocalcopy): Implement.

2006-06-17  Pavel Tsekov  <ptsekov@gmx.net>

	* mountlist.c (fstype_to_string): Update the code to match its
	coreutils counterpart.
	Guard the use of MOUNT_UFS and MOUNT_NFS with appropriate
	ifdefs as the rest of the code does.

2006-06-17  Pavel Tsekov  <ptsekov@gmx.net>

	* mountlist.c (HAVE_F_FSTYPENAME): Define when getmntinfo() is
	used and the struct which it fills has a field named f_fstypename.
	(read_filesystem_list) [MOUNTED_GETMNTINFO]: Use
	MOUNTED_GETMNTINFO_STATVFS to determine the type of the first
	argument to getmntinfo().

2006-06-11  Leonard den Ottolander  <leonard den ottolander nl>

	* dir.c (sort_orders): Substitute duplicate hotkey 'C' in sort order
	dialog.

2006-06-07  Pavel Tsekov  <ptsekov@gmx.net>

	* mountlist.c: Revert last commit.

2006-05-29  Pavel Tsekov  <ptsekov@gmx.net>

	* widget.c (disable_update): Remove redundant static variable.
	(handle_char): Reflect the changes above.

2006-05-23  Hampa Hug  <hampa@hampa.ch>

	* file.c (move_file_file): Do not collect progress information
	when moving via copy/erase - copy_file_file() does that.
	Collect progress information when moving via rename ().

2006-05-23  Pavel Tsekov  <ptsekov@gmx.net>
